crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__an_int_literal_keyed_array_element_normalizes_the_key_to_a_string.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:27
    v1 = array.new []  ; array
    v2 = const.int 5  ; int
    v3 = helper.int_to_string v2  ; string
    v4 = const.str "a"  ; string
    v5 = array.set v1, v3, v4  ; array
    release v5
    release v0
    return
}
