crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__appending_an_aliasing_string_value_retains_it.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array, string) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    v2 = param 2  ; string
    ; stmt s0 @4:5-4:15
    retain v2
    v3 = array.append v1, v2 ! bb1  ; array
    release v3
    release v0
    release v2
    return
  bb1:
    release v1
    release v0
    release v2
    propagate "m() at t.mwl:4"
}
