crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__elvis_transfers_a_fresh_refcounted_condition_with_no_retain_or_release.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:32
    v1 = class.of v0  ; classdesc
    v2 = call T::make(this: v1) ! bb1  ; string
    v3 = helper.str_truthy v2  ; bool
    branch v3 -> bb2 (e0), bb3 (e1)
  bb1:
    release v0
    propagate "m() at t.mwl:4"
  bb2:
    jump bb4
  bb3:
    v4 = const.str "x"  ; string
    jump bb4
  bb4:
    v5 = phi [bb2: v2, bb3: v4]  ; string
    release v0
    return v5
}
